2. vpc.tf
provider "aws" {
  region = "ap-northeast-2"
  shared_credentials_file = "../../../.aws/credentials"
  profile = "default"
}

resource "aws_vpc" "hjko_vpc" {    
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true 
  enable_dns_support = true
  tags = {
    "Name" = "hjko-vpc"
  }
}
